# chittyscore

./: .gitignore  .replit  CLAUDE.md  Dockerfile  README.md  app.py  pyproject.toml  replit.md  requirements.txt  schema.sql  wrangler.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  compliance-check.yml
chittypm/: wrangler.toml
src/chitty_score/: analytics.py  dimensions.py  persistence.py
tests/: test_persistence_integration.py  test_smoke.py
