[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chittyscore"
version = "1.0.0"
description = "ChittyScore behavioral trust scoring service for the ChittyOS ecosystem."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Chitty Foundation" }
]
dependencies = [
    "Flask>=3.0,<4.0",
    "Flask-Cors>=4.0,<5.0",
    "gunicorn>=21.2,<22.0",
    "numpy>=1.24,<3.0",
    "psycopg2-binary>=2.9,<3.0",
    "pydantic>=2.5,<3.0",
    "python-dotenv>=1.0,<2.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["chitty_score*"]
